--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "socket.io": "^2.0.4"
   },
   "devDependencies": {
+    "angular": "^1.6.6",
     "mocha": "^4.0.1",
-    "should": "^13.1.2"
+    "should": "^13.1.2",
+    "webpack": "^3.8.1"
   }
 }
