--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "scripts": {
     "start": "node server.js",
-    "test": "./node_modules/mocha/bin/mocha -R spec"
+    "test": "mocha -R spec",
+    "bundle": "webpack"
   },
   "dependencies": {
     "express": "^4.16.2",
