--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   },
   "devDependencies": {
     "angular": "^1.6.6",
+    "chai": "^4.1.2",
     "mocha": "^4.0.1",
-    "should": "^13.1.2",
     "webpack": "^3.8.1"
   }
 }
