--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "node index.js",
     "test": "mocha **/*.spec.js -R spec --exit",
-    "bundle": "webpack"
+    "build": "webpack"
   },
   "dependencies": {
     "express": "^4.16.2",
